--- a/inference.ipynb
+++ b/inference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,8 @@
     "    \"output_video_s3_path\": \"s3://output-tracker-bucket/videos\", # output s3 path\n",
     "    \"output_crops_s3_path\": \"s3://output-tracker-bucket/crops\", # output s3 path\n",
     "    \"save_vid\": True, # whether to save video to s3\n",
-    "    \"save_to_json_sample\": True # whether to save json sample to s3\n",
+    "    \"save_to_json_sample\": True, # whether to save json sample to s3\n",
+    "    \"read_interval\": 0.2 # interval between frames\n",
     "}\n",
     "# dump request as x-www-form-urlencoded payload\n",
     "headers = {\n",
@@ -41,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "61d7eb58-51d1-485a-9080-36b9b2a8b8e3\n"
+      "419f40c3-3d4a-47bb-96fc-f5768ba157ea\n"
      ]
     }
    ],
